@@ -72,7 +72,7 @@ EOT
 
 print <<"END";
 Parrot Version $parrot_version Configure 2.0
-Copyright (C) 2001-2002 Yet Another Society
+Copyright (C) 2001-2003 Yet Another Society
 
 Hello, I'm Configure.  My job is to poke and prod your system to figure out
 how to build Parrot.  The process is completely automated, unless you passed in
